      distribution.
   -- Added another variant: Fracas!
   -- Added in an option to put varying bullet points in front of units 
      (was one of the TODO items)
   -- Added in flags to individually turn off the ability to study, teach 
      or gain experience in a skill (another one of the TODO items, requested 
      for Ceran)
   -- Option to create surface level with a fractal algorithm. A new GeoMap
      class was implemented to handle the generation of fractal geographical
      maps for world creation. Gamedefs FRACTAL_MAP, FRACTAL_SCATTER and
      FRACTAL_SMOOTH govern this method of map generation
   -- Fix bug in ARegion destructor  
   -- Added code to generate Icosahedral (ie, approximately spherical)
      levels.  Cleaned up some direction handling and some assumptions
      about there always being a region where you expected one to be.
   -- Fixed bug in CheckSea() where left of D_NORTH gave you D_NORTHEAST.
   -- created map.cpp in the gameset directory and moved world creation code
      from aregion.cpp to map.cpp to allow for game specific setup routines
   -- removed FRACTAL_... gamedefs - these things are now handled by game
      specific code in map.cpp
   -- created economy.cpp in the main directory and moved economy-related code
      from aregion.cpp into economy.cpp.
   -- tidied up market setup: markets now have a fixed number of normal-type
      buy/sell items. The items are now related to the racial skills and
      the produceable resources in the region. This removes a lot of the
      weapons and tools on sale in the game.
   -- changed the way market activity figures in town growth. Only grain and
      livestock as well as trade items are needed for town growth - all other
      items can be traded for extra gain as a replacement for untraded grain
      or livestock.
   -- added code to create City Guards from normal men if LEADER_EXIST isn't
      set.