@@ -100,7 +100,7 @@ static GameDefs g = {
 	50, /* TIMES_REWARD */
 
 	1, // TOWNS_EXIST
-	1, // LEADERS_EXIST
+	0, // LEADERS_EXIST
 	1, // SKILL_LIMIT_NONLEADERS
 	0, // MAGE_NONLEADERS
 	1, // RACES_EXIST
