@@ -852,3 +852,7 @@ Changes from 4.0.10 -> 5.0.0
       or livestock.
    -- added code to create City Guards from normal men if LEADER_EXIST isn't
       set.
+   -- the MakeManUnit(..) function in npc.cpp now helps with setting up
+      npc units consisting of normal men, their weapons and armor (if any).
+      The idea is that the same code can be used to easily create roaming
+      npc units later on...
